--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -40,7 +40,11 @@ command: ~
 
 args: ~
 
+# -- Directly set environment variables
 env: []
+
+# -- Set environment variables from configMaps or Secrets
+envValueFrom: {}
 
 additionalVolumeMounts: []
 
