feat!: Simplify environment variable configuration

--- a/charts/generic/templates/cronjob.yaml
+++ b/charts/generic/templates/cronjob.yaml
@@ -53,8 +53,9 @@ spec:
               {{- end }}
               {{- if or .Values.env .Values.envValueFrom }}
               env:
-                {{- if .Values.env }}
-                {{- toYaml .Values.env | nindent 16 }}
+                {{- range $key, $value := .Values.env }}
+                - name: {{ $key }}
+                  value: {{ $value | quote }}
                 {{- end }}
                 {{- range $key, $value := .Values.envValueFrom }}
                 - name: {{ $key }}
