chore: clean up resource generation and template files

--- a/charts/generic/templates/cronjob.yaml
+++ b/charts/generic/templates/cronjob.yaml
@@ -19,37 +19,33 @@ spec:
       template:
         metadata:
           {{- with .Values.podAnnotations }}
-          annotations:
-            {{- toYaml . | nindent 12 }}
+          annotations: {{- toYaml . | nindent 12 }}
           {{- end }}
-          labels:
-            {{- include "generic.selectorLabels" . | nindent 12 }}
+          labels: {{- include "generic.selectorLabels" . | nindent 12 }}
         spec:
           restartPolicy: {{ .Values.restartPolicy }}
           {{- with .Values.imagePullSecrets }}
-          imagePullSecrets:
-            {{- toYaml . | nindent 12 }}
+          imagePullSecrets: {{- toYaml . | nindent 12 }}
           {{- end }}
           serviceAccountName: {{ include "generic.serviceAccountName" . }}
-          securityContext:
-            {{- toYaml .Values.podSecurityContext | nindent 12 }}
+          {{- with .Values.podSecurityContext }}
+          securityContext: {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.initContainers }}
-          initContainers:
-            {{ toYaml . | nindent 12 }}
+          initContainers: {{ toYaml . | nindent 12 }}
           {{- end }}
           containers:
             - name: {{ .Chart.Name }}
-              securityContext:
-                {{- toYaml .Values.securityContext | nindent 16 }}
+              {{- with .Values.securityContext }}
+              securityContext: {{- toYaml . | nindent 16 }}
+              {{- end }}
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
               imagePullPolicy: {{ .Values.image.pullPolicy }}
               {{- with .Values.command }}
-              command:
-                {{ toYaml . | nindent 16 }}
+              command: {{ toYaml . | nindent 16 }}
               {{- end }}
               {{- with .Values.args }}
-              args:
-                {{ toYaml . | nindent 16 }}
+              args: {{ toYaml . | nindent 16 }}
               {{- end }}
               {{- if or .Values.env .Values.envValueFrom }}
               env:
@@ -59,10 +55,10 @@ spec:
                 {{- end }}
                 {{- range $key, $value := .Values.envValueFrom }}
                 - name: {{ $key }}
-                  valueFrom:
-                    {{- $value | toYaml | nindent 20 }}
+                  valueFrom: {{- $value | toYaml | nindent 20 }}
                 {{- end }}
               {{- end }}
+              {{- if or .Values.persistence.enabled .Values.additionalVolumeMounts }}
               volumeMounts:
                 {{- if .Values.persistence.enabled }}
                 - name: data
@@ -70,31 +66,31 @@ spec:
                 {{- end }}
               {{- with .Values.additionalVolumeMounts }}
                 {{- toYaml . | nindent 16 }}
-              {{- end  }}
+              {{- end }}
+              {{- end }}
+              {{- with .Values.ports }}
               ports:
-                {{- toYaml .Values.ports | nindent 16 }}
-              {{- with .Values.livenessProbe }}
-              livenessProbe:
                 {{- toYaml . | nindent 16 }}
+              {{- end }}
+              {{- with .Values.livenessProbe }}
+              livenessProbe: {{- toYaml . | nindent 16 }}
               {{- end }}
               {{- with .Values.readinessProbe }}
-              readinessProbe:
-                {{- toYaml . | nindent 16 }}
+              readinessProbe: {{- toYaml . | nindent 16 }}
               {{- end }}
-              resources:
-                {{- toYaml .Values.resources | nindent 16 }}
+              {{- with .Values.resources }}
+              resources: {{- toYaml .Values.resources | nindent 16 }}
+              {{- end }}
           {{- with .Values.nodeSelector }}
-          nodeSelector:
-            {{- toYaml . | nindent 12 }}
+          nodeSelector: {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.affinity }}
-          affinity:
-            {{- toYaml . | nindent 12 }}
+          affinity: {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.tolerations }}
-          tolerations:
-            {{- toYaml . | nindent 12 }}
+          tolerations: {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- if or .Values.persistence.enabled .Values.additionalVolumes }}
           volumes:
             {{- if .Values.persistence.enabled }}
             - name: data
@@ -104,4 +100,5 @@ spec:
             {{- with .Values.additionalVolumes }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
+          {{- end }}
 {{- end -}}
