--- a/charts/generic/templates/deployment.yaml
+++ b/charts/generic/templates/deployment.yaml
@@ -17,42 +17,37 @@ spec:
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
-    matchLabels:
-      {{- include "generic.selectorLabels" . | nindent 6 }}
+    matchLabels: {{- include "generic.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
+      annotations: {{- toYaml . | nindent 8 }}
       {{- end }}
-      labels:
-        {{- include "generic.selectorLabels" . | nindent 8 }}
+      labels: {{- include "generic.selectorLabels" . | nindent 8 }}
     spec:
       restartPolicy: {{ .Values.restartPolicy }}
       {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+      imagePullSecrets: {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "generic.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.podSecurityContext }}
+      securityContext: {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- with .Values.initContainers }}
-      initContainers:
-        {{ toYaml . | nindent 8 }}
+      initContainers: {{ toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+          {{- with .Values.securityContext }}
+          securityContext: {{- toYaml . | nindent 12 }}
+          {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- with .Values.command }}
-          command:
-            {{ toYaml . | nindent 12 }}
+          command: {{ toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.args }}
-          args:
-            {{ toYaml . | nindent 12 }}
+          args: {{ toYaml . | nindent 12 }}
           {{- end }}
           {{- if or .Values.env .Values.envValueFrom }}
           env:
@@ -62,10 +57,10 @@ spec:
             {{- end }}
             {{- range $key, $value := .Values.envValueFrom }}
             - name: {{ $key }}
-              valueFrom:
-                {{- $value | toYaml | nindent 16 }}
+              valueFrom: {{- $value | toYaml | nindent 16 }}
             {{- end }}
           {{- end }}
+          {{- if or .Values.persistence.enabled .Values.additionalVolumeMounts }}
           volumeMounts:
             {{- if .Values.persistence.enabled }}
             - name: data
@@ -74,30 +69,29 @@ spec:
           {{- with .Values.additionalVolumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end  }}
-          ports:
-            {{- toYaml .Values.ports | nindent 12 }}
+          {{- end }}
+          {{- with .Values.ports }}
+          ports: {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.livenessProbe }}
-          livenessProbe:
-            {{- toYaml . | nindent 12 }}
+          livenessProbe: {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.readinessProbe }}
-          readinessProbe:
-            {{- toYaml . | nindent 12 }}
+          readinessProbe: {{- toYaml . | nindent 12 }}
           {{- end }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+          {{- with .Values.resources }}
+          resources: {{- toYaml . | nindent 12 }}
+          {{- end }}
       {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
+      nodeSelector: {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
+      affinity: {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
+      tolerations: {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if or .Values.persistence.enabled .Values.additionalVolumes }}
       volumes:
         {{- if .Values.persistence.enabled }}
         - name: data
@@ -107,4 +101,5 @@ spec:
         {{- with .Values.additionalVolumes }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
+      {{- end }}
 {{- end -}}
