feat: add JobsHistoryLimit for CronJob

--- a/charts/generic/templates/cronjob.yaml
+++ b/charts/generic/templates/cronjob.yaml
@@ -13,6 +13,12 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
+  {{- with .Values.successfulJobsHistoryLimit }}
+  successfulJobsHistoryLimit: {{ . }}
+  {{- end }}
+  {{- with .Values.failedJobsHistoryLimit }}
+  failedJobsHistoryLimit: {{ . }}
+  {{- end }}
   schedule: "{{ .Values.schedule }}"
   jobTemplate:
     spec:
