feat: add ingressClassName to Ingress resource

--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -90,7 +90,11 @@ service:
   ip: ~
 
 ingress:
+  ## -- Enable or disable this Ingress
   enabled: false
+
+  # -- The ingressClassName for this Ingress resource
+  className: ~
   annotations: {}
 
   hosts:
