Add support for persistence.storageClassName in generig chart

--- a/charts/generic/templates/pvc.yaml
+++ b/charts/generic/templates/pvc.yaml
@@ -8,6 +8,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  {{- if .Values.persistence.storageClassName }}
+  storageClassName: {{ .Values.persistence.storageClassName }}
+  {{- end }}
   resources:
     requests:
       storage: {{ .Values.persistence.storage }}
