--- a/charts/backup/templates/cronjob-cleanup.yaml
+++ b/charts/backup/templates/cronjob-cleanup.yaml
@@ -31,6 +31,7 @@ spec:
             {{- else }}
               - --no-cache
               - --verbose
+              - --group-by paths
               - --repo
               - {{ .Values.repo }}
               - forget
