fix: each argument is one element

--- a/charts/backup/templates/cronjob-cleanup.yaml
+++ b/charts/backup/templates/cronjob-cleanup.yaml
@@ -31,7 +31,8 @@ spec:
             {{- else }}
               - --no-cache
               - --verbose
-              - --group-by paths
+              - --group-by
+              - paths
               - --repo
               - {{ .Values.repo }}
               - forget
