Quote backup and cleanup schedules
To be honest, it is a bit of an obscure use-case to run this each minute.
But if the schedule starts with an * helm fails with
"error converting YAML to JSON: yaml: line 11: did not find expected alphabetic or numeric character".
This is solved by always quoting the schedule.

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "backup.labels" . | nindent 4 }}
 spec:
-  schedule: {{ .Values.backupJob.schedule }}
+  schedule: {{ .Values.backupJob.schedule | quote }}
   jobTemplate:
     spec:
       template:
