Set concurrencyPolicy of CronJobs
Allow to specify the concurrecnyPolicy for the backup and cleanup Jobs.
The default of Kubernetes is "Allow" but I think for this chart it makes sense
to set the default to "Forbid".
Bumped the major version because this is kind of an breaking change, even though
it probably breaks nothing.

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "backup.labels" . | nindent 4 }}
 spec:
   schedule: {{ .Values.backupJob.schedule | quote }}
+  concurrencyPolicy: {{ .Values.backupJob.concurrencyPolicy }}
   jobTemplate:
     spec:
       template:
