Make successfulJobsHistoryLimit and failedJobsHistoryLimit configurable
Keeping four jobs/pods for each backup target uses up quite a bit of
space in the cluster. By making it configurable the users can reduce
the overhead if wanted.

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -7,6 +7,8 @@ metadata:
 spec:
   schedule: {{ .Values.backupJob.schedule | quote }}
   concurrencyPolicy: {{ .Values.backupJob.concurrencyPolicy }}
+  successfulJobsHistoryLimit: {{ .Values.backupJob.successfulJobsHistoryLimit }}
+  failedJobsHistoryLimit: {{ .Values.backupJob.failedJobsHistoryLimit }}
   jobTemplate:
     spec:
       template:
