Add static labels to the pods
Currently the pods only have some dynamic labels which makes
it impossible to apply network policies to the pods.
By adding the selector labels as static labels we end up with
some static labels we can use for network policies (or other pod selectors).

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -10,6 +10,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            {{- include "backup.selectorLabels" . | nindent 14 }}
         spec:
           {{- with .Values.imagePullSecrets }}
           imagePullSecrets:
