--- a/charts/backup/templates/cronjob-cleanup.yaml
+++ b/charts/backup/templates/cronjob-cleanup.yaml
@@ -11,6 +11,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            {{- include "backup.selectorLabels" . | nindent 14 }}
         spec:
           {{- with .Values.imagePullSecrets }}
           imagePullSecrets:
