feat: bump ZNC version number

--- a/charts/znc/templates/ingress.yaml
+++ b/charts/znc/templates/ingress.yaml
@@ -33,7 +33,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: {{ .Values.service.httpPort }}
-          {{- end }}
+                  number: {{ $.Values.service.httpPort }}
+
     {{- end }}
 {{- end }}
