fix: add default value for .Values.persistence.mountPath

--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -62,6 +62,8 @@ annotations: {}
 
 persistence:
   enabled: false
+  # -- Where the persistent volume is mounted
+  mountPoint: /data
   storage: 100Mi
   # -- Set a storageClassName, otherwise the default class is used.
   storageClassName: ~
