fix: "Always" is not a valid restartPolicy for CronJob pods. Moving to "OnFailure"

--- a/charts/cronjob/values.yaml
+++ b/charts/cronjob/values.yaml
@@ -13,7 +13,7 @@ failedJobsHistoryLimit: ~
 schedule: "17 3 * * *"
 
 # -- if the Job should restart when the command fails
-restartPolicy: Always
+restartPolicy: OnFailure
 
 # -- initContainers to use. Requires a list of valid container specs.
 initContainers: []
