--- a/charts/postfix-sendonly/values.yaml
+++ b/charts/postfix-sendonly/values.yaml
@@ -14,16 +14,11 @@ fullnameOverride: ""
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext:
+  # This is the group of the opendkim user which we need for the key to belong to the right group
+  fsGroup: 101
 
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
