--- a/charts/postfix-sendonly/Chart.yaml
+++ b/charts/postfix-sendonly/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: postfix-sendonly
-description: Sendonly mail services for your cluster
+description: Sendonly relay mail services for your cluster
 type: application
-version: 1.0.2
+version: 2.0.0
