feat: add auto upgrading for helm

--- a/.github/workflows/lint-and-release.yml
+++ b/.github/workflows/lint-and-release.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
+          # renovate: datasource=github-releases depName=helm/helm
           version: v3.4.0
 
       - name: Helm lint
@@ -43,6 +44,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
+          # renovate: datasource=github-releases depName=helm/helm
           version: v3.5.4
 
       - name: Run chart-releaser
