--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,16 @@
 {
   "extends": [
     "config:base"
+  ],
+  "regexManagers": [
+    {
+      "description": "Upgrade arbitrary dependencies with the key 'version' in a GitHub workflow file",
+      "fileMatch": [
+        "^.github/workflows/*.ya?ml$"
+      ],
+      "matchStrings": [
+        "# renovate datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\sversion:\\s*\"?(?<currentValue>.*)\"?"
+      ]
+    }
   ]
 }
