fix: renovate matchStrings

--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
         "^.github/workflows/*.ya?ml$"
       ],
       "matchStrings": [
-        "# renovate datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\sversion:\\s*\"?(?<currentValue>.*)\"?"
+        "# renovate: datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\sversion:\\s*\"?(?<currentValue>.*)\"?"
       ]
     }
   ]
