chore(deps): upgrade helm-docs and enable pre-commit in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,9 @@
   "extends": [
     "config:base"
   ],
+  "pre-commit": {
+    "enabled": true
+  },
   "regexManagers": [
     {
       "description": "Upgrade arbitrary dependencies with the key 'version' in a GitHub workflow file",
