--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,16 @@
       "matchStrings": [
         "# renovate: datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\s*version:\\s*\"?(?<currentValue>.*)\"?"
       ]
+    },
+    {
+      "description": "Upgrade go version in a GitHub workflow",
+      "fileMatch": [
+        "(^workflow-templates|\\.github\/workflows)\/[^/]+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "# renovate: go-version\\s*go-version:\\s*\"?(?<currentValue>.*)\"?"
+      ],
+      "datasourceTemplate": "golang-version"
     }
   ]
 }
