--- a/charts/cronjob/Chart.yaml
+++ b/charts/cronjob/Chart.yaml
@@ -2,4 +2,7 @@ apiVersion: v2
 name: cronjob
 description: Run jobs on a schedule
 type: application
-version: 1.1.3
+version: 1.1.4
+maintainers:
+  - name: morre
+    email: charts@mor.re
