--- a/charts/namespaces/Chart.yaml
+++ b/charts/namespaces/Chart.yaml
@@ -2,4 +2,7 @@ apiVersion: v2
 name: namespaces
 description: Deploy namespaces with (default) networkpolicies
 type: application
-version: 1.1.0
+version: 1.1.1
+maintainers:
+  - name: morre
+    email: charts@mor.re
