--- a/charts/postfix-sendonly/Chart.yaml
+++ b/charts/postfix-sendonly/Chart.yaml
@@ -2,4 +2,5 @@ apiVersion: v2
 name: postfix-sendonly
 description: Sendonly relay mail services for your cluster
 type: application
-version: 2.0.1
+version: 2.1.0
+deprecated: true
