--- a/.github/workflows/helm-docs.yml
+++ b/.github/workflows/helm-docs.yml
@@ -1,9 +1,10 @@
 name: Helm Docs
 
 on:
+  pull_request:
   push:
-    paths:
-    - 'charts/**'
+    branches:
+      - main
 
 jobs:
   helm-docs:
