feat: use maps instead of lists
Lists can not be merged which forces users to define all namespaces and
policies in a single file. This gets chaotic really fast. By replacing the
lists with maps we make it possible to merge several values files into
one.

This is a breaking change which requires every user to change their
values. An upgrade guide is included in the README.

--- a/charts/namespaces/templates/namespace.yaml
+++ b/charts/namespaces/templates/namespace.yaml
@@ -1,10 +1,10 @@
 {{- $labels := include "namespaces.labels" . -}}
-{{- range $.Values.namespaces }}
+{{- range $name, $v := $.Values.namespaces }}
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .name }}
+  name: {{ $name }}
   annotations:
     helm.sh/resource-policy: keep
   labels:
