--- a/charts/namespaces/Chart.yaml
+++ b/charts/namespaces/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: namespaces
 description: Deploy namespaces with (default) networkpolicies
 type: application
-version: 1.1.1
+version: 2.0.0
 maintainers:
   - name: morre
     email: charts@mor.re
+  - name: ekeih
