--- a/charts/namespaces/values.yaml
+++ b/charts/namespaces/values.yaml
@@ -1,8 +1,8 @@
 # -- List of namespaces to deploy
-namespaces: []
+namespaces: {}
 
 # -- NetworkPolicies that will be applied to all namespaces
-defaultNetworkPolicies: []
+defaultNetworkPolicies: {}
 
 # -- Switch to disable all NetworkPolicies
 disableNetworkPolicies: false
