--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,11 @@
+default_stages:
+  - commit
+
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
     hooks:
       - id: prettier
-        stages:
-          - commit
 
   - repo: https://github.com/norwoodj/helm-docs
     rev: v1.7.0
