docs: morremeyer is named morremeyer, not morre

--- a/charts/backup/Chart.yaml
+++ b/charts/backup/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: backup
 description: Chart to back up PVCs with restic and regularly clean up the snapshots.
 type: application
-version: 2.6.2
+version: 2.6.3
 maintainers:
-  - name: morre
+  - name: morremeyer
     email: charts@mor.re
