--- a/charts/namespaces/Chart.yaml
+++ b/charts/namespaces/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: namespaces
 description: Deploy namespaces with (default) networkpolicies
 type: application
-version: 2.0.0
+version: 2.0.1
 maintainers:
-  - name: morre
+  - name: morremeyer
     email: charts@mor.re
   - name: ekeih
