--- a/charts/cronjob/Chart.yaml
+++ b/charts/cronjob/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: cronjob
 description: Run jobs on a schedule
 type: application
-version: 2.0.0
+version: 2.0.1
 maintainers:
-  - name: morre
+  - name: morremeyer
     email: charts@mor.re
