--- a/charts/namespaces/templates/namespace.yaml
+++ b/charts/namespaces/templates/namespace.yaml
@@ -5,8 +5,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ $name }}
+{{- if $.Values.keepNamespaces }}
   annotations:
     helm.sh/resource-policy: keep
+{{- end }}
   labels:
     {{- $labels | nindent 4 }}
   {{- with .labels }}
