--- a/charts/namespaces/templates/networkpolicy.yaml
+++ b/charts/namespaces/templates/networkpolicy.yaml
@@ -8,8 +8,10 @@ kind: NetworkPolicy
 metadata:
   name: {{ $defaultNetworkPolicyName }}
   namespace: {{ $namespaceName }}
+{{- if $.Values.keepNetworkPolicies }}
   annotations:
     helm.sh/resource-policy: keep
+{{- end }}
 spec:
   {{- toYaml $defaultNetworkPolicy.spec | nindent 2}}
 {{- end }}
@@ -21,8 +23,10 @@ kind: NetworkPolicy
 metadata:
   name: {{ $networkPolicyName }}
   namespace: {{ $namespaceName }}
+{{- if $.Values.keepNetworkPolicies }}
   annotations:
     helm.sh/resource-policy: keep
+{{- end }}
 spec:
   {{- toYaml $networkPolicy.spec | nindent 2}}
 {{- end -}}
