--- a/.github/workflows/helm-docs-crd-updates-pre-commit.yml
+++ b/.github/workflows/helm-docs-crd-updates-pre-commit.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
       - uses: actions/setup-go@v2
         with:
           # renovate: go-version
