test: make workflows independent, remove pre-commit, add renovate for helm-docs

--- a/renovate.json
+++ b/renovate.json
@@ -26,6 +26,13 @@
       "matchStrings": [
         "# renovate datasource=(?<datasource>.*?)\\sregistryUrl=(?<registryUrl>.*?)\\sdepName=(?<depName>.*?)\\sversion: (?<currentValue>.*)"
       ]
+    },
+    {
+      "description": "Upgrade helm-docs version in a GitHub workflow",
+      "fileMatch": ["(^workflow-templates|\\.github/workflows)/[^/]+\\.ya?ml$"],
+      "matchStrings": [
+        "# renovate datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\s*run: go install github.com/norwoodj/helm-docs/cmd/helm-docs@(?<currentValue>.*)"
+      ]
     }
   ]
 }
