--- a/.github/workflows/helm-docs-and-update-crds.yml
+++ b/.github/workflows/helm-docs-and-update-crds.yml
@@ -1,11 +1,39 @@
-name: Update kube-prometheus-stack CRDs
+name: Helm Docs and CRD updates
 
 on:
   pull_request:
-    paths:
-      - charts/kube-prometheus-stack-crds/Chart.yaml
+  push:
+    branches:
+      - main
 
 jobs:
+  helm-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - uses: actions/setup-go@v2
+        with:
+          # renovate: go-version
+          go-version: 1.17.7
+
+      - name: Install helm-docs
+        # renovate: datasource=github-releases depName=norwoodj/helm-docs
+        run: go install github.com/norwoodj/helm-docs/cmd/helm-docs@v1.7.0
+
+      - name: regenerate documentation
+        run: $HOME/go/bin/helm-docs
+
+      - name: Commit updated docs
+        uses: EndBug/add-and-commit@v8
+        with:
+          message: "docs: regenerate chart README.md"
+
+          # Only add README.md in charts/ and all subdirectories: https://git-scm.com/docs/git-add#_examples
+          add: "charts/**/README.md"
+
   update-crds:
     runs-on: ubuntu-latest
     steps:
