--- a/.github/workflows/update-kube-prometheus-stack-crds.yml
+++ b/.github/workflows/update-kube-prometheus-stack-crds.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           message: "chore: update kube-prometheus-stack CRDs"
           add: "charts/kube-prometheus-stack-crds/templates/*"
-          pull: "--rebase"
+          pull: "--rebase --autostash"
