--- a/charts/generic/templates/deployment.yaml
+++ b/charts/generic/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     matchLabels: {{- include "generic.selectorLabels" . | nindent 6 }}
   {{- with .Values.deploymentStrategy }}
   strategy:
-    type: {{ . }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
   template:
     metadata:
