feat: add service.loadBalancerIP to generic chart

--- a/charts/generic/templates/service.yaml
+++ b/charts/generic/templates/service.yaml
@@ -20,3 +20,6 @@ spec:
   {{- if and (eq .Values.service.type "ClusterIP") (.Values.service.ip) }}
   clusterIP: {{ .Values.service.ip }}
   {{- end }}
+  {{- with .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ . }}
+  {{- end }}
