chore: only trigger kube-prometheus-stack workflow on push when branch is main

--- a/.github/workflows/update-kube-prometheus-stack-crds.yml
+++ b/.github/workflows/update-kube-prometheus-stack-crds.yml
@@ -2,6 +2,8 @@ name: Update kube-prometheus-stack CRDs
 
 on:
   push:
+    branches:
+      - main
     paths:
       - charts/kube-prometheus-stack-crds/Chart.yaml
   pull_request:
