feat: add support for additional volumes and volume mounts for the backup job

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -70,10 +70,15 @@ spec:
             resources:
               {{- toYaml . | nindent 14 }}
             {{- end }}
-            {{- if .Values.pvc }}
+            {{- if or .Values.pvc .Values.backupJob.backup.additionalVolumeMounts }}
             volumeMounts:
+            {{- end }}
+            {{- if .Values.pvc }}
               - mountPath: "/data"
                 name: data
+            {{- end }}
+            {{- if .Values.backupJob.backup.additionalVolumeMounts }}
+              {{- toYaml .Values.backupJob.backup.additionalVolumeMounts | nindent 14 }}
             {{- end }}
           restartPolicy: {{ .Values.backupJob.restartPolicy }}
           {{- with .Values.backupJob.nodeSelector }}
@@ -98,10 +103,15 @@ spec:
           tolerations:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- if .Values.pvc }}
+          {{- if or .Values.pvc .Values.backupJob.additionalVolumes }}
           volumes:
+          {{- end }}
+          {{- if .Values.pvc }}
             - name: data
               persistentVolumeClaim:
                 claimName: {{ .Values.pvc }}
+          {{- end }}
+          {{- if .Values.backupJob.additionalVolumes }}
+            {{- toYaml .Values.backupJob.additionalVolumes | nindent 12 }}
           {{- end }}
 
