--- a/charts/backup/Chart.yaml
+++ b/charts/backup/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: backup
 description: Chart to back up PVCs with restic and regularly clean up the snapshots.
 type: application
-version: 2.7.0
+version: 2.8.0
 maintainers:
   - name: morremeyer
     email: charts@mor.re
+  - name: ekeih
