feat: add support to configure restic compression
With restic 0.14.0 it supports compression. The default level is auto
but it is possible to override it via `--compression (auto|max|off)`.

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -54,6 +54,10 @@ spec:
             {{- else }}
               - --no-cache
               - --verbose
+              {{- if .Values.compression }}
+              - --compression
+              - {{ .Values.compression }}
+              {{- end }}
               - --repo
               - {{ .Values.repo }}
               - backup
