--- a/charts/backup/values.yaml
+++ b/charts/backup/values.yaml
@@ -2,6 +2,9 @@
 repo: ~
 pvc: ~
 
+# -- compression mode (only available for repository format version 2), one of (auto|off|max)
+compression: ~
+
 # -- The secret that all containers load their environment from. See https://restic.readthedocs.io/en/latest/040_backup.html#environment-variables for variables.
 secretName: "backup-secret"
 
