--- a/charts/generic/Chart.yaml
+++ b/charts/generic/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: generic
 description: A chart for generic applications. Use this if you need to deploy something without wanting to build a fully fledged new helm chart.
 type: application
-version: 3.2.2
+version: 3.3.0
 maintainers:
   - name: morremeyer
     email: charts@mor.re
+  - name: ekeih
