--- a/charts/generic/templates/deployment.yaml
+++ b/charts/generic/templates/deployment.yaml
@@ -64,11 +64,22 @@ spec:
               value: {{ $value | quote }}
             {{- end }}
           {{- end }}
-          {{- if or .Values.persistence.enabled .Values.additionalVolumeMounts }}
+          {{- if or .Values.persistence.enabled .Values.additionalVolumeMounts .Values.configMap.mountPath .Values.configMap.mountFiles }}
           volumeMounts:
             {{- if .Values.persistence.enabled }}
             - name: data
               mountPath: {{ .Values.persistence.mountPath }}
+            {{- end }}
+            {{- with .Values.configMap.mountPath }}
+            - name: configmap
+              mountPath: {{ . }}
+              readOnly: true
+            {{- end }}
+            {{- range $file := .Values.configMap.mountFiles }}
+            - name: configmap
+              mountPath: {{ .mountPath }}
+              subPath: {{ .subPath }}
+              readOnly: true
             {{- end }}
           {{- with .Values.additionalVolumeMounts }}
             {{- toYaml . | nindent 12 }}
@@ -98,7 +109,7 @@ spec:
       {{- with .Values.tolerations }}
       tolerations: {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if or .Values.persistence.enabled .Values.additionalVolumes }}
+      {{- if or .Values.persistence.enabled .Values.additionalVolumes .Values.configMap.mountPath .Values.configMap.mountFile }}
       volumes:
         {{- if .Values.persistence.enabled }}
         - name: data
@@ -107,5 +118,10 @@ spec:
         {{- end }}
         {{- with .Values.additionalVolumes }}
         {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- if or .Values.configMap.mountPath .Values.configMap.mountFiles }}
+        - name: configmap
+          configMap:
+            name: {{ include "generic.fullname" . }}
         {{- end }}
       {{- end }}
