--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -68,7 +68,7 @@ configMap:
 persistence:
   enabled: false
   # -- Where the persistent volume is mounted
-  mountPoint: /data
+  mountPath: /data
   storage: 100Mi
   # -- Set a storageClassName, otherwise the default class is used.
   storageClassName: ~
