feat(generic): add persistence.annotations, e.g. to set a helm policy

--- a/charts/generic/templates/pvc.yaml
+++ b/charts/generic/templates/pvc.yaml
@@ -5,6 +5,9 @@ metadata:
   name: {{ include "generic.fullname" . }}
   labels:
     {{- include "generic.labels" . | nindent 4 }}
+  {{- with .Values.persistence.annotations }}
+  annotations: {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   accessModes:
     - ReadWriteOnce
