--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -32,6 +32,9 @@ podSecurityContext: {}
 
 securityContext: {}
 
+# -- Set to true to enable host networking
+hostNetwork: false
+
 command: ~
 
 args: ~
