feat: enable configuration of multiple ports

--- a/charts/generic/templates/service.yaml
+++ b/charts/generic/templates/service.yaml
@@ -11,10 +11,19 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
+  {{- /* Include the deprecated settings if .Values.service.ports is empty */}}
+  {{- if not .Values.service.ports }}
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       protocol: {{ .Values.service.protocol }}
       name: {{ .Values.service.name }}
+  {{- end }}
+  {{- range .Values.service.ports }}
+    - port: {{ .port }}
+      targetPort: {{ .targetPort }}
+      protocol: {{ .protocol }}
+      name: {{ .name }}
+  {{- end }}
   selector:
     {{- include "generic.selectorLabels" . | nindent 4 }}
   {{- if and (eq .Values.service.type "ClusterIP") (.Values.service.ip) }}
