--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -100,10 +100,22 @@ startupProbe: ~
 service:
   type: ClusterIP
   annotations: {}
+
+  # -- DEPRECATED: Use service.ports[*].targetPort. Target port on the pod. Ignored if service.ports is specified.
   targetPort: http
+  # -- DEPRECATED: Use service.ports[*].protocol. Protocol to use for the target port. Ignored if service.ports is specified.
   protocol: TCP
+  # -- DEPRECATED: Use service.ports[*].name. Name of the port on the service. Ignored if service.ports is specified.
   name: http
+  # -- DEPRECATED: Use service.ports[*].port. Port to use on the service. Ignored if service.ports is specified.
   port: 80
+
+  # -- List of ports. If you override it, you will have to explicitly add the default again.
+  ports: []  # TODO: Add default port and documentation.
+    # - targetPort: http
+    #   protocol: TCP
+    #   name: http
+    #   port: 80
 
   # Only for type ClusterIP
   ip: ~
